# thematic-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  initspec-thematic-analysis.md  pyproject.toml  thematic-analysis.spec
examples/: example-config.toml  example-transcript.txt
prompts/: default-prompts.md
scripts/: build-macos.sh  check-running.sh  download_tiktoken_data.py  pyinstaller_entry.py
src/thematic_analysis/: __init__.py  analysis.py  app.py  cli.py  config.py  merge.py  prompts.py  resume.py  steps.py  verification.py
src/thematic_analysis/templates/: index.html
